@@ -228,15 +228,14 @@ namespace Orthanc
 
     void ReportStorageCommitment(
       const std::string& transactionUid,
-      const std::list<std::string>& successSopClassUids,
-      const std::list<std::string>& successSopInstanceUids,
-      const std::list<std::string>& failureSopClassUids,
-      const std::list<std::string>& failureSopInstanceUids);      
+      const std::vector<std::string>& sopClassUids,
+      const std::vector<std::string>& sopInstanceUids,
+      const std::vector<StorageCommitmentFailureReason>& failureReasons);
 
     // transactionUid: To be generated by Toolbox::GenerateDicomPrivateUniqueIdentifier()
     void RequestStorageCommitment(
       const std::string& transactionUid,
-      const std::list<std::string>& sopClassUids,
-      const std::list<std::string>& sopInstanceUids);
+      const std::vector<std::string>& sopClassUids,
+      const std::vector<std::string>& sopInstanceUids);
   };
 }
